Fix radio button alignment in firefox

--- a/public/scss/basho.scss
+++ b/public/scss/basho.scss
@@ -521,6 +521,7 @@
 
             .select-radio {
                 vertical-align: middle;
+                align-self: center;
                 visibility: hidden;
             }
             
